# pocket_prover-set

./: Cargo.toml  README.md
examples/: eight_sets.rs  finite_is_not_infinite.rs  two_sets.rs
src/: lib.rs
